--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,15 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
+
+
+
 
 
     </dependencies>
